--- a/vignettes/nested-sampling-with-ernest.Rmd
+++ b/vignettes/nested-sampling-with-ernest.Rmd
@@ -14,6 +14,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r srr-tags, eval = FALSE, echo = FALSE}
+#' roxygen_block_name
+#' 
+#' @srrstats {G1.3} Vignette presents consistent statistical terminology to be
+#' used throughout ernest.
+#' @srrstats {BS1.2, BS1.2b} Contains examples for specifying priors.
+#' @srrstats {BS1.3, BS1.3a} Describes how to save and continue previous runs
+#' with `generate()`.
+```
+
 This vignette introduces the nested sampling algorithm and demonstrates how to use the ernest R package to estimate model evidence for a Bayesian model. After reading this, you will know more about the foundations of nested sampling, and you will be able to use ernest to perform a basic nested sampling run over a regression model and review the results.
 
 We focus on providing a basic overview of the theory behind nested sampling: For more information, consider the more in-depth explorations offered in @buchner2023 and @ashton2022.
